# portfolio-optimiser

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  backtest_strategies.py  config.py  daily_ledger.db  debug_ledger.py  entrypoint.sh  live_portfolios.json  pyproject.toml  requirements.txt  run_live.py  test_llm_single.py  train_rl.py  train_strategies.py
.github/workflows/: daily_trade.yml
agents/: llm_agent.py  rl_agent.py
dashboard/: app.py
data/: pipeline.py
engine/: ledger.py  portfolio.py  scheduler.py
env/: trade_gym.py
evaluation/: metrics.py
scripts/: train_rl.py
tests/: test_ledger.py  test_metrics.py  test_pipeline.py  test_portfolio.py  test_trade_gym.py
