[project]
name = "portfolio-optimiser"
version = "0.1.0"
description = "RL vs. LLM 'Duel of the Models' — paper trading experiment"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11",
    "groq>=0.4",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
[tool.setuptools.packages.find]
include = ["data*", "env*", "agents*", "engine*", "evaluation*", "dashboard*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
